# humaniod-robotics-book

./: .dockerignore  .gitignore  README.md  vercel.json
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  README.md  agent.py  main.py  pyproject.toml  requirements.txt  retrieve_data.py
backend/src/api/: main.py
backend/src/models/: api_models.py  db_models.py
backend/src/services/: __init__.py  agent.py  db.py  rag_service.py
book/: docusaurus.config.js  package-lock.json
book/docs/part1-ros2/: 01-introduction.md  02-communication-patterns.md  03-urdf-modeling.md
book/docs/part2-simulation/: 01-sim-physics.md  02-isaac-setup.md
book/docs/part3-isaac/: 01-navigation.md
book/docs/part4-vlm/: 01-mapping.md  05-capstone.md
book/src/pages/: index.js
book/src/theme/: Chatbot.js  Chatbot.module.css
code/lab1_ws/src/lab1_pkg/: package.xml  setup.py
code/lab1_ws/src/lab1_pkg/lab1_pkg/: talker_node.py
code/lab3_ws/src/lab3_pkg/: CMakeLists.txt  package.xml
code/lab3_ws/src/lab3_pkg/launch/: nav2_lab.launch.py
history/prompts/001-humanoid-robotics-book/: 1-specify-humanoid-robotics-book.spec.prompt.md  2-plan-humanoid-robotics-book-toc.plan.prompt.md  3-create-tasks-for-robotics-book.tasks.prompt.md  4-implement-robotics-book-module-1.green.prompt.md  5-complete-all-robotics-book-tasks.green.prompt.md
history/prompts/002-rag-chatbot-backend/: 1-plan-rag-chatbot-backend.plan.prompt.md  2-create-tasks-for-rag-chatbot.tasks.prompt.md  3-implement-rag-chatbot-backend.green.prompt.md  4-fix-openai-401-error.green.prompt.md  5-fix-gemini-api-quota-error.green.prompt.md  6-fix-qdrantclient-attributeerror.green.prompt.md  7-fix-qdrant-collection-not-found-error.green.prompt.md  8-update-chatbot-to-use-openrouter-api.green.prompt.md
history/prompts/constitution/: 1-establish-robotics-constitution.constitution.prompt.md
specs/001-humanoid-robotics-book/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-humanoid-robotics-book/checklists/: requirements.md
specs/002-rag-chatbot-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rag-chatbot-backend/checklists/: requirements.md
(+7 files in other folders)
