[project]
name = "backend"
version = "0.1.0"
description = "Backend for Physical AI & Humanoid Robotics Book"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cohere>=5.20.1",
    "dotenv>=0.9.9",
    "openai-agents>=0.6.4",
    "qdrant-client>=1.16.2",
    "requests>=2.32.5",
    "trafilatura>=2.0.0",
]
