<?xml version="1.0"?>
<package format="3">
  <name>lab1_pkg</name>
  <version>0.0.0</version>
  <description>ROS 2 package for Lab 1: Publisher/Subscriber and URDF visualization.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
