<?xml version="1.0"?>
<package format="3">
  <name>lab3_pkg</name>
  <version>0.0.0</version>
  <description>ROS 2 package for Lab 3: Autonomous Navigation with Nav2.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <build_depend>ament_cmake</build_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
